// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option should be able to render with the SimpleListItem props 1`] = `
<li
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-option"
  data-testid="option"
  id="option-1"
  role="option"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    home
  </i>
  <span
    class="rmd-list-item__text"
  >
    <span>
      Some custom children 
    </span>
  </span>
</li>
`;

exports[`Option should render as an <li> with the correct attributes 1`] = `
<li
  class="rmd-list-item rmd-list-item--clickable rmd-option"
  data-testid="option"
  id="listbox-option-1"
  role="option"
>
  <span
    class="rmd-list-item__text"
  >
    Option 1
  </span>
</li>
`;

exports[`Option should render as an <li> with the correct attributes 2`] = `
<li
  aria-selected="true"
  class="rmd-list-item rmd-list-item--clickable rmd-option rmd-option--selected"
  data-testid="option"
  id="listbox-option-1"
  role="option"
>
  <span
    class="rmd-list-item__text"
  >
    Option 1
  </span>
</li>
`;

exports[`Option should render as an <li> with the correct attributes 3`] = `
<li
  aria-selected="true"
  class="rmd-list-item rmd-list-item--clickable rmd-option rmd-option--selected rmd-option--focused"
  data-testid="option"
  id="listbox-option-1"
  role="option"
>
  <span
    class="rmd-list-item__text"
  >
    Option 1
  </span>
</li>
`;

exports[`Option should render as an <li> with the correct attributes 4`] = `
<li
  class="rmd-list-item rmd-list-item--clickable rmd-option rmd-option--focused"
  data-testid="option"
  id="listbox-option-1"
  role="option"
>
  <span
    class="rmd-list-item__text"
  >
    Option 1
  </span>
</li>
`;
